# safetext

./: .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl
common/: BUILD.bazel  common.go
lockedcallbacks/: lockedcallbacks.go  lockedcallbacks_test.go
shsprintf/: BUILD.bazel  shsprintf.go  shsprintf_test.go
shtemplate/: BUILD.bazel  shtemplate.go  shtemplate_test.go
yamltemplate/: BUILD.bazel  yamltemplate.go  yamltemplate_test.go
